proxyless/yaml/server/virtualService_traffic_split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kitex-server
spec:
  hosts:
    - kitex-server
  http:
    - name: "traffic-split-route"
      route:
        - destination:
            host: kitex-server
            subset: v1
          weight: 90
        - destination:
            host: kitex-server
            subset: v2
          weight: 10
